fixed the alignment and some few things

--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ section.paymentBtn {
 /* footer */
 footer {
   position: absolute;
-  margin-top: 60px;
+  margin-top: 10px;
   bottom: 3px;
   left: 10px;
   align-items: center;
